--- a/src/css/more.css
+++ b/src/css/more.css
@@ -8,7 +8,7 @@ display for all the popups
 .popuplocationwrap.morepopup, .popuplocationwrap.addpopup {
   /* text-align: center; */
   z-index: 2;
-  position: fixed;
+  position: absolute;
   top: 200px;
   left: calc(50% - 314px);
   user-select: none;
